--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
+    "mongoose": "^5.5.6",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
