--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
+    "mapbox-gl": "^0.54.0",
     "mongoose": "^5.5.6",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-mapbox-gl": "^4.3.1",
     "react-router-dom": "^5.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
