--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "bulma": "^0.7.4",
     "css-loader": "^2.1.1",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
     "mapbox-gl": "^0.54.0",
