--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "bcrypt": "^3.0.6",
+    "brcypt": "^1.0.1",
     "bulma": "^0.7.4",
     "css-loader": "^2.1.1",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mapbox-gl": "^0.54.0",
     "mongoose": "^5.5.6",
+    "mongoose-unique-validator": "^2.0.3",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
