--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "bcrypt": "^3.0.6",
+    "bluebird": "^3.5.4",
     "brcypt": "^1.0.1",
     "bulma": "^0.7.4",
     "css-loader": "^2.1.1",
