--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.8.6",
     "react-mapbox-gl": "^4.3.1",
     "react-router-dom": "^5.0.0",
+    "react-select": "^2.4.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.31.0",
