--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bluebird": "^3.5.4",
     "brcypt": "^1.0.1",
     "bulma": "^0.7.4",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
