--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bulma": "^0.7.4",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
+    "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
